# kchat-rust-sdk

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  NOTICE  README.md  SECURITY.md
.cargo/: cargo.toml  config.toml
.github/workflows/: ci.yml  mls-uniffi-cd.yml  mls-uniffi-ci.yml  release.yml
crates/kchat-mls/: Cargo.toml
crates/kchat-mls-napi/: .gitignore  Cargo.toml  README.md  package.json
crates/kchat-mls-napi/scripts/: install.js  version.js
crates/kchat-mls-napi/src/: error.rs  lib.rs
crates/kchat-mls-uniffi/: .gitignore  Cargo.toml  Makefile  README.md  uniffi.toml
crates/kchat-mls-uniffi/src/: error.rs  lib.rs  logger.rs  mls.rs
crates/kchat-mls-uniffi/tests/: ffi_max_past_epochs.rs  ffi_sqlcipher.rs  ffi_sqlite_group_flow.rs
crates/kchat-mls/src/: lib.rs
crates/kchat-mls/tests/: custom_proposal.rs  get_all_group_ids.rs  member_id.rs  process_all_messages.rs
crates/kchat-storage-provider/: Cargo.toml
crates/kchat-storage-provider/migrations/: V3__epoch_message_secrets_storage.sql  V4__epoch_message_secrets_migration_state.sql  V5__drop_group_epoch_meta.sql
crates/kchat-storage-provider/src/: encryption_key_pairs.rs  epoch_key_pairs.rs  epoch_migration_state.rs  group_data.rs  group_epoch_message_secrets.rs  group_epoch_meta.rs  key_packages.rs  lib.rs  own_leaf_nodes.rs  proposals.rs  psks.rs  signature_key_pairs.rs  storage_provider.rs  wrappers.rs
crates/kchat-storage-provider/tests/: connection_pool.rs
crates/uq-openmls/: Cargo.toml  README.md
crates/uq-openmls/benches/: pq_group_sizes.rs
crates/uq-openmls/examples/: pq_key_sizes.rs
crates/uq-openmls/src/: ciphersuite.rs  core.rs  error.rs  lib.rs  provider.rs  util.rs
crates/uq-openmls/src/provider/: sqlite_provider.rs
crates/uq-openmls/tests/: epoch_migration.rs  epoch_performance.rs  sqlite_transaction.rs
crates/uq-openmls/tests/e2ee/: group.rs  helper.rs  key_package.rs  main.rs  message.rs  performance.rs
crates/uq-openmls/tests/post_quantum/: main.rs
scripts/: mls_uniffi_build_android.sh  mls_uniffi_build_ios.sh
