[workspace]
resolver = "3"
members = [
    "crates/kchat-mls",
    "crates/kchat-mls-uniffi",
    "crates/kchat-mls-napi",
    "crates/uq-openmls",
    "crates/kchat-storage-provider",
]

[workspace.dependencies]
criterion = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
secrecy = "0.10.3"

openmls = { version = "0.8.0" }
openmls_basic_credential = { version = "0.5.0" }
openmls_traits = { version = "0.5.0" }
openmls_rust_crypto = { version =  "0.5.0" }

[patch.crates-io]
openmls = { git = "https://github.com/KChatGlobal/openmls.git", branch = "main" }
openmls_basic_credential = { git = "https://github.com/KChatGlobal/openmls.git", branch = "main" }
openmls_traits = { git = "https://github.com/KChatGlobal/openmls.git", branch = "main" }
openmls_rust_crypto = { git = "https://github.com/KChatGlobal/openmls.git", branch = "main" }
