[workspace]
resolver = "3"
members = [
    "crates/kchat-mls",
    "crates/kchat-mls-uniffi",
    "crates/kchat-mls-napi",
    "crates/uq-openmls",
    "crates/kchat-storage-provider",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
authors = ["KChat Authors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/KChatGlobal/kchat-rust-sdk"
homepage = "https://kchat.com"
keywords = ["mls", "e2ee", "messaging", "openmls", "crypto"]
categories = ["cryptography", "api-bindings"]

[workspace.dependencies]
criterion = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
secrecy = "0.10.3"

openmls = { version = "0.8.0" }
openmls_basic_credential = { version = "0.5.0" }
openmls_traits = { version = "0.5.0" }
openmls_rust_crypto = { version =  "0.5.0" }

[patch.crates-io]
openmls = { git = "ssh://git@github-personal/KChatGlobal/openmls.git", branch = "main" }
openmls_basic_credential = { git = "ssh://git@github-personal/KChatGlobal/openmls.git", branch = "main" }
openmls_traits = { git = "ssh://git@github-personal/KChatGlobal/openmls.git", branch = "main" }
openmls_rust_crypto = { git = "ssh://git@github-personal/KChatGlobal/openmls.git", branch = "main" }
