
[package]
name = "kchat_mls_napi"
description = "Node.js (NAPI-RS) bindings for the KChat MLS SDK."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "3.0.0"
napi-derive = "3.0.0"

openmls = { workspace = true }
openmls_basic_credential = { workspace = true }
openmls_traits = { workspace = true }
openmls_rust_crypto = { workspace = true }

rusqlite = { version = "0.32", features = ["bundled"] }
uq-openmls = { path = "../uq-openmls" }
kchat-mls = {path = "../kchat-mls" }
thiserror = { workspace = true }
secrecy = { workspace = true }

[build-dependencies]
napi-build = "2"
