[package]
name = "kchat-mls-uniffi"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib", "lib", "cdylib"]
name = "mls_mobile_sdk_rs"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
openmls = { version = "0.7.1" }
openmls_basic_credential = { version = "0.4.1" }
openmls_traits = { version = "0.4.1" }
openmls_rust_crypto = { version =  "0.4.1" }
openmls_sqlite_storage = { version = "0.1.1", default-features = false }

rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3"
uniffi = { version = "0.29.1", features = ["cli", "tokio"] }
uq-openmls = { path = "../uq-openmls" }
kchat-mls = {path = "../kchat-mls" }
thiserror = { workspace = true }
secrecy = { workspace = true }

[dev-dependencies]
uniffi = { version = "0.29.0", features = ["bindgen-tests"] }
criterion = { workspace = true }
rand = "0.9"
