[package]
name = "kchat-mls-uniffi"
version = "0.2.0"
edition = "2024"

[lib]
crate-type = ["staticlib", "lib", "cdylib"]
name = "mls_mobile_sdk_rs"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
openmls = { workspace = true }
openmls_basic_credential = { workspace = true }
openmls_traits = { workspace = true }
openmls_rust_crypto = { workspace = true }

rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3"
uniffi = { version = "0.31", features = ["cli", "tokio"] }
uq-openmls = { path = "../uq-openmls" }
kchat-mls = {path = "../kchat-mls" }
thiserror = { workspace = true }
secrecy = { workspace = true }

[dev-dependencies]
uniffi = { version = "0.31", features = ["bindgen-tests"] }
criterion = { workspace = true }
rand = "0.9"
