[package]
name = "kchat-mls-uniffi"
description = "UniFFI bindings exposing the KChat MLS SDK to Swift and Kotlin."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["staticlib", "lib", "cdylib"]
name = "mls_mobile_sdk_rs"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
openmls = { workspace = true }
openmls_basic_credential = { workspace = true }
openmls_traits = { workspace = true }
openmls_rust_crypto = { workspace = true }

rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3"
uniffi = { version = "0.31", features = ["cli", "tokio"] }
uq-openmls = { path = "../uq-openmls" }
kchat-mls = {path = "../kchat-mls" }
thiserror = { workspace = true }
secrecy = { workspace = true }

[dev-dependencies]
uniffi = { version = "0.31", features = ["bindgen-tests"] }
criterion = { workspace = true }
rand = "0.9"
