[package]
name = "kchat-mls"
version = "0.1.0"
edition = "2024"
authors = ["KChat Authors"]

[dependencies]
openmls = { version = "0.7.1" }
openmls_basic_credential = { version = "0.4.0" }
openmls_traits = { version = "0.4.1" }
openmls_rust_crypto = { version =  "0.4.1" }
openmls_sqlite_storage = { version = "0.1.1", default-features = false }
uq-openmls = { git = "ssh://git@github.com/KChatGlobal/sdk-rust.git", branch = "develop" }

rusqlite = { version = "0.32", features = ["bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
secrecy = { workspace = true }
