[package]
name = "kchat-mls"
version = "0.2.0"
edition = "2024"
authors = ["KChat Authors"]

[dependencies]
openmls = { workspace = true, features = ["test-utils"] }
openmls_basic_credential = { workspace = true }
openmls_traits = { workspace = true }
openmls_rust_crypto = { workspace = true }
uq-openmls = { path = "../uq-openmls" }
kchat_storage_provider = { path = "../kchat-storage-provider" }

rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
