[package]
name = "kchat-mls"
description = "High-level KChat MLS group lifecycle and message processing on top of OpenMLS."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
openmls = { workspace = true, features = ["test-utils"] }
openmls_basic_credential = { workspace = true }
openmls_traits = { workspace = true }
openmls_rust_crypto = { workspace = true }
uq-openmls = { path = "../uq-openmls" }
kchat_storage_provider = { path = "../kchat-storage-provider" }

rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
