[package]
name = "kchat_storage_provider"
description = "SQLite-backed implementation of the OpenMLS StorageProvider trait for KChat."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
openmls_traits = { workspace = true }
thiserror = "2.0"
serde = { workspace = true }
log = { version = "0.4" }
r2d2 = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
refinery = { version = "0.9", features = ["rusqlite", "enums"] }

[features]
extensions-draft-08 = ["openmls_traits/extensions-draft-08"]
