[package]
name = "uq-openmls"
version = "0.2.0"
edition = "2024"
authors = ["KChat Authors"]

[dependencies]
openmls = { workspace = true, features = ["fork-resolution"] }
openmls_basic_credential = { workspace = true }
openmls_traits = { workspace = true }
openmls_rust_crypto = { workspace = true }
openmls_sqlite_storage = { workspace = true, default-features = false }

rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
secrecy = { workspace = true }

[dev-dependencies]
openmls = { workspace = true, features = ["fork-resolution", "test-utils"] }
criterion = { workspace = true }
