[package]
name = "uq-openmls"
description = "Thin OpenMLS wrapper exposing the MLS primitives used by the KChat SDK."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
openmls = { workspace = true, features = ["fork-resolution"] }
openmls_basic_credential = { workspace = true }
openmls_traits = { workspace = true }
openmls_rust_crypto = { workspace = true }
kchat_storage_provider = { path = "../kchat-storage-provider" }

rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
secrecy = { workspace = true }

[dev-dependencies]
openmls = { workspace = true, features = ["fork-resolution", "libcrux-provider", "test-utils"] }
criterion = { workspace = true }
openmls_sqlite_storage = { git = "ssh://git@github.com/KChatGlobal/openmls.git", branch = "main" }
